--- a/Frontend/src/app/components/elements/back-button/back-button.component.scss
+++ b/Frontend/src/app/components/elements/back-button/back-button.component.scss
@@ -1,5 +1,8 @@
 .button-text{
     margin: 20px;
-    font-size: 0.2em;
-    
+    margin-bottom: 0px;
+    font-size: 0.1em;
+    align-items: center;
+    color: white;
+    background-color: transparent;
 }
