--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.scss
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.scss
@@ -90,9 +90,10 @@
   user-select: none;
   background-color: #2a556e80;
   border-radius: 25px;
-  padding: 10px 20px;
+  padding-top: 10px 20px;
+  padding-right: -10px;
   margin-top: 10px;
-  margin-left: 10px;
+
 
 }
 
