--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.scss
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.scss
@@ -82,20 +82,6 @@
   transform: scaleY(1);
 }
 
-.example-toolbar {
-  
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-  border: none;
-  margin-top: 10px;
-  user-select: none;
-  background-color: #2a556e80;
-  border-radius: 25px;
-  padding-top: 10px 20px;
-  padding-right: -10px;
-  margin-top: 10px;
-
-
-}
 
 .form-text {
   color: white;
@@ -115,3 +101,53 @@
   color: white;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
+
+.info-text {
+  color: white;
+  font-family: 'Rajdhani-SemiBold';
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  background-color: #2a556e80;
+  border: none;
+  margin-top: 30px;
+  width:fit-content;
+  position: absolute;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  top: 30px;
+  left: 30px;
+  align-items: center;
+  padding:10px;
+  border-radius: 10px;
+  line-height: 0.8;
+
+  
+}
+
+.username {
+  color: #00fe75;
+}
+
+.example-toolbar {
+  
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  border: none;
+  margin-top: 10px;
+  user-select: none;
+  background-color: #2a556e80;
+  border-radius: 25px;
+  padding-top: 10px 20px;
+  padding-right: -10px;
+  margin-top: 10px;
+
+
+}
+
+.player-image{
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  border-radius: 50%;
+  margin-bottom: 2px;
+ 
+}
+
