--- a/Frontend/src/app/components/elements/card/card.component.html
+++ b/Frontend/src/app/components/elements/card/card.component.html
@@ -11,9 +11,9 @@
           </mat-label>
           <br><br>
           <p>
-            <strong>Race:</strong> {{element.race}}
+            <strong>Race:</strong> {{element.card_race}}
           </p>
-            {{element.energy}} ⚡ {{element.price}} 💰 <strong>{{element.type}} </strong> 
+            {{element.energy}} ⚡ {{element.cost}} 💰 <strong>{{element.card_type}} </strong> 
           
         </mat-card-content>
      
