Update: card interface

--- a/Frontend/src/app/components/elements/card/card.component.scss
+++ b/Frontend/src/app/components/elements/card/card.component.scss
@@ -12,6 +12,13 @@
 
 }
 
+.card:hover {
+    cursor: pointer;
+    background: white;
+    border: solid 1px #4facfe;
+
+}
+
 .form-input {
     background-color:  #ff93cf80;
     width: 100%;
