--- a/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
+++ b/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
@@ -11,7 +11,7 @@
     
     <mat-card>
       <h2 class = "title-text">Elija una de estas tres cartas para añadir.</h2>
-      <app-multiple-clickable-cards ></app-multiple-clickable-cards>
+      <app-multiple-cards [cards]="clickableCards" [clickable]="true"></app-multiple-cards>
     </mat-card>
   </div>
   <div class="pop-up-button">
