--- a/Frontend/src/app/components/elements/multiple-cards/multiple-cards.component.html
+++ b/Frontend/src/app/components/elements/multiple-cards/multiple-cards.component.html
@@ -1,5 +1,5 @@
 <div class="multiple-cards">
 
-    <app-card class="app-card" *ngFor="let card of cards" [element]="card"></app-card>
+    <app-card class="app-card" [clickable]="clickable"  *ngFor="let card of cards" [element]="card"></app-card>
 
 </div>
