--- a/Frontend/src/app/components/elements/card/card.component.scss
+++ b/Frontend/src/app/components/elements/card/card.component.scss
@@ -12,10 +12,29 @@
 
 }
 
-.card:hover {
+.clickable-card {
+   
+    width: 110px;
+    height: 190px;
+    background: linear-gradient(to right, #4facfe, #00f2fe);
+    border: solid 1px #0f0c16;
+    text-align:justify;
+    color: #ff93cf;
+    border-radius: 10px;
+    align-items: center;
+    word-wrap: break-word;
+
+}
+
+.clickable-card:hover {
     cursor: pointer;
     background: white;
-    border: solid 1px #4facfe;
+    background-color: white;
+    border: solid 2px #8ecaff;
+    color: white;
+    box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+    0px 5px 8px 0px rgba(0,0,0,0.14),
+    0px 1px 14px 0px rgba(0,0,0,0.12);
 
 }
 
