fix: minor details regarding filtering of initial process

--- a/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
+++ b/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
@@ -15,7 +15,7 @@
     </mat-card>
   </div>
   <div class="pop-up-button">
-    <button class="button-text" (click)="close()">Save</button>
+    <button type="submit" class="button-text" (click)="close()">Save</button>
   </div>
   
 </div>
