fix: error message for card creation now show according to mistake

--- a/Frontend/src/app/components/forms/create-card-form/create-card-form.component.html
+++ b/Frontend/src/app/components/forms/create-card-form/create-card-form.component.html
@@ -43,7 +43,7 @@
                     <input [formControl]="energy" type="number" id="energy" name="energy" class="form-input"
                         placeholder="100" style="width: 150px;" required>
                     <br>
-                    <mat-error *ngIf="energy.invalid  && fault">{{getErrMessage(energy)}}</mat-error>
+                    <mat-error *ngIf="fault">{{getErrMessage(energy)}}</mat-error>
                 </div>
                 <div class="form-group">
                     <mat-label class="form-text" for="price">Costo: </mat-label>
