fix: user sign up validation of email already takes into account when email is already taken, fixed other messages

--- a/Frontend/src/app/components/forms/sign-up-form/sign-up-form.component.html
+++ b/Frontend/src/app/components/forms/sign-up-form/sign-up-form.component.html
@@ -3,7 +3,7 @@
         <mat-label for="mail"> Correo: </mat-label>
         <input [formControl]="mail" type="email" id="email" name="email" class="form-input" style="width: 300px;" placeholder="example@something.com" required>
         <br>
-        <mat-error *ngIf="mail.invalid && fault">{{getErrMessage(mail)}}</mat-error>
+        <mat-error *ngIf="(mail.invalid && fault)||emailalreadytaken">{{getErrMessage(mail)}}</mat-error>
     </div>
     <br>
     <div class="form-group">
