--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.html
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.html
@@ -3,7 +3,9 @@
     
     <img class="navbar-image" src="assets/images/logo.png" alt="logo">
     <button mat-button class="form-text" routerLink="/create_card">Crear Carta</button>
-    <button mat-button class="form-text" routerLink="/cards">Ver Cartas</button>
+    <button mat-button class="form-text" routerLink="/cards">Mis Cartas</button>
+    <button mat-button class="form-text" routerLink="/decks">Mis Decks</button>
+    <button mat-button class="form-text" routerLink="/create_deck">Crear Deck</button>
     <button mat-button class="form-text" routerLink="/home">Lobby</button>
     <button mat-button class="form-text" routerLink="/">Salir</button>
 </mat-toolbar>
