update: sample cards and decks functionality

--- a/Frontend/src/app/components/views/deck-menu/deck-menu.component.html
+++ b/Frontend/src/app/components/views/deck-menu/deck-menu.component.html
@@ -1,1 +1,5 @@
 <app-side-menu></app-side-menu>
+<div >
+    <button  class="button-text" *ngFor="let deck of decks">{{deck.name}}</button>
+
+</div>
