Add: view cards in deck when clicked

--- a/Frontend/src/app/components/views/single-deck/single-deck.component.html
+++ b/Frontend/src/app/components/views/single-deck/single-deck.component.html
@@ -1,4 +1,4 @@
-<mat-card-title class="form-input">{{deck.name}}</mat-card-title>
+<h2>{{data.deck.name}}</h2>
 <mat-card-content class="mat-card-content">
-  <app-multiple-cards [cards]="cards"></app-multiple-cards>
-</mat-card-content>
+    <app-multiple-cards [cards]="data.deck.cards"></app-multiple-cards>
+  </mat-card-content>
