--- a/Frontend/src/app/components/views/deck-menu/deck-menu.component.html
+++ b/Frontend/src/app/components/views/deck-menu/deck-menu.component.html
@@ -1,5 +1,4 @@
 <app-side-menu></app-side-menu>
 <div >
-    <button  class="button-text" *ngFor="let deck of decks">{{deck.name}}</button>
-
+    <button  class="button-text" (click)="openClickedDeck(deck)" *ngFor="let deck of decks">{{deck.name}}</button>
 </div>
