Update: deck interface

--- a/Frontend/src/app/components/views/deck-menu/deck-menu.component.html
+++ b/Frontend/src/app/components/views/deck-menu/deck-menu.component.html
@@ -1,4 +1,6 @@
 <app-side-menu></app-side-menu>
-<div >
-    <button  class="button-text" (click)="openClickedDeck(deck)" *ngFor="let deck of decks">{{deck.name}}</button>
-</div>
+
+
+    <div class="multiple-decks">
+        <button  class="button-text" (click)="openClickedDeck(deck)" *ngFor="let deck of decks">{{deck.name}}</button>
+    </div>
