--- a/Frontend/src/app/components/views/create/create-planet/create-planet.component.html
+++ b/Frontend/src/app/components/views/create/create-planet/create-planet.component.html
@@ -1,1 +1,7 @@
-<p>create-planet works!</p>
+<app-side-menu></app-side-menu>
+
+<app-back-button></app-back-button>
+<h4 class="title-text">Crear Planeta</h4>
+<div class = "box">
+    <app-create-planet-form></app-create-planet-form>
+    </div>
