--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -93,5 +93,11 @@ body {
     font-family: 'Rajdhani-SemiBold';
     src: url('assets/fonts/Rajdhani-SemiBold.ttf');
 }
+
+@font-face {
+    font-family: 'Rajdhani-Bold';
+    src: url('assets/fonts/Rajdhani-Bold.ttf');
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
