--- a/Frontend/src/app/components/elements/side-menu/side-menu.component.html
+++ b/Frontend/src/app/components/elements/side-menu/side-menu.component.html
@@ -2,12 +2,15 @@
     <button class="button-text" mat-icon-button (click)="toggleInfo()"><mat-icon>menu</mat-icon></button>
     
     <img class="navbar-image" src="assets/images/logo.png" alt="logo">
+    <button mat-button class="form-text" routerLink="/home">JUGAR</button>
     <button mat-button class="form-text" routerLink="/create_card">Crear Carta</button>
     <button mat-button class="form-text" routerLink="/cards">Mis Cartas</button>
     <button mat-button class="form-text" routerLink="/decks">Mis Decks</button>
     <button mat-button class="form-text" routerLink="/create_deck">Crear Deck</button>
-    <button mat-button class="form-text" routerLink="/home">Lobby</button>
+    <button mat-button class="form-text" routerLink="/create_planet">Crear Planeta</button>
+    <button mat-button class="form-text" routerLink="/planets">Ver Planetas</button>
     <button mat-button class="form-text" routerLink="/">Salir</button>
+   
 </mat-toolbar>
 <div *ngIf="showInfo" class="info-text">
     <img  class="player-image" [src]="playerInfo.image" alt="Player Image">
