--- a/Frontend/src/app/components/views/lobby/lobby.component.scss
+++ b/Frontend/src/app/components/views/lobby/lobby.component.scss
@@ -6,8 +6,22 @@
 }
 
     .button-text {
+      color: #f0f0f0;
+      border: 5px double #f0f0f0;
       font-size: 4rem;
-      background: #fe00be80;
+      background: linear-gradient(to right,#f455ff8b, #3c08b480);
       margin: 0px;
       font-family: 'Rajdhani-Bold';
+     
+    }
+
+
+    .button-text:hover {
+      color: #ff558e;
+      background: #f0f0f080;
+      border: 5px double #ff558e;
+      box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+      0px 5px 8px 0px rgba(0,0,0,0.14),
+      0px 1px 14px 0px rgba(0,0,0,0.12);
+      
     }
