--- a/Frontend/src/app/components/pop-ups/match-not-found/match-not-found.component.html
+++ b/Frontend/src/app/components/pop-ups/match-not-found/match-not-found.component.html
@@ -1,1 +1,7 @@
-<h2 class="form-text">{{ data.message }}</h2>
+<div class="dialog">
+    <h2 mat-dialog-title class="title-text">Aviso</h2>
+    <div>
+
+        <h2 class="title-text">El tiempo de espera ha expirado, no se ha encontrado una partida.</h2>
+    </div>   
+        <button type="submit" class="button-text" (click)="close()">Volver al Inicio </button>
