--- a/Frontend/src/app/components/forms/login-form/login-form.component.scss
+++ b/Frontend/src/app/components/forms/login-form/login-form.component.scss
@@ -7,3 +7,9 @@
 }
 
 
+.title-text {
+    font-size: 2rem;
+    font-family: 'Rajdhani-SemiBold';
+    text-shadow: 2px 2px #000000;
+    text-align: center;
+  }
