--- a/Frontend/src/app/components/views/create/create-card/create-card.component.scss
+++ b/Frontend/src/app/components/views/create/create-card/create-card.component.scss
@@ -18,12 +18,12 @@
 
   }
 
-  .app-card:hover{
-    pointer-events: none;
-    background: linear-gradient(to right, #4facfe, #00f2fe);
-  }
+
+
 
   .title-text {
-    font-size: 1.7rem;
+    font-size: 4.5rem;
+    font-family: 'Rajdhani-SemiBold';
+    text-shadow: 2px 2px #000000;
+    text-align: center;
   }
- 
