--- a/Frontend/src/app/components/views/create/create-planet/create-planet.component.scss
+++ b/Frontend/src/app/components/views/create/create-planet/create-planet.component.scss
@@ -9,6 +9,7 @@
     margin-top: 5vh;
 }
 
+
 .multiple-cards{
     display: flex;
   }
@@ -23,7 +24,11 @@
     background: linear-gradient(to right, #4facfe, #00f2fe);
   }
 
-  .title-text {
-    font-size: 1.7rem;
-  }
+
  
+  .title-text {
+    font-size: 4.5rem;
+    font-family: 'Rajdhani-SemiBold';
+    text-shadow: 2px 2px #000000;
+    text-align: center;
+  }
