--- a/Frontend/src/app/components/views/login/login.component.scss
+++ b/Frontend/src/app/components/views/login/login.component.scss
@@ -27,3 +27,11 @@
     //justify-content: center;
     justify-items: center;
 }
+
+
+.title-text {
+    font-size: 2rem;
+    font-family: 'Rajdhani-SemiBold';
+    text-shadow: 2px 2px #000000;
+    text-align: center;
+  }
