--- a/Frontend/src/app/components/views/menu/card-menu/card-menu.component.html
+++ b/Frontend/src/app/components/views/menu/card-menu/card-menu.component.html
@@ -1,3 +1,4 @@
 <app-side-menu></app-side-menu>
 <app-back-button></app-back-button>
+<h4 class="title-text">Mis Cartas</h4>
 <app-multiple-cards [cards]="cards"></app-multiple-cards>
