--- a/Frontend/src/app/components/views/menu/planet-menu/planet-menu.component.html
+++ b/Frontend/src/app/components/views/menu/planet-menu/planet-menu.component.html
@@ -1,3 +1,4 @@
 <app-side-menu></app-side-menu>
-<app-back-button></app-back-button>
+<app-back-button></app-back-button>\
+<h4 class="title-text">Ver Planetas</h4>
 <app-multiple-planets [planets]="planets"></app-multiple-planets>
