--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -9,10 +9,11 @@ body {
 
 
 .title-text {
+    font-size: 4.5rem;
     font-family: 'Rajdhani-SemiBold';
+  
     text-align: center;
-    font-size: 2rem;
-}
+  }
 
 .form-text {
     font-family: 'Rajdhani-SemiBold';
@@ -61,6 +62,13 @@ body {
     border-radius: 25px;
     padding: 10px 20px;
     cursor: pointer;}
+
+    .button-text:hover{
+        box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
+        0px 5px 8px 0px rgba(0,0,0,0.14),
+        0px 1px 14px 0px rgba(0,0,0,0.12);
+
+    }
 
 .underlined-button {
     padding-top: 10px;
