--- a/Frontend/src/app/components/views/game-setup/loading-game/loading-game.component.html
+++ b/Frontend/src/app/components/views/game-setup/loading-game/loading-game.component.html
@@ -2,4 +2,5 @@
 <div class = "form-text" *ngIf="!timeExpired">
     Buscando partida, quedan {{ remainingTime }} segundos...
   </div>
+  <button class="button-text" (click)="findMatch()">Encontrar partida</button>
   
