--- a/Frontend/src/app/components/views/game-setup/deck-select/deck-select.component.html
+++ b/Frontend/src/app/components/views/game-setup/deck-select/deck-select.component.html
@@ -1,1 +1,6 @@
-<p>deck-select works!</p>
+<app-side-menu></app-side-menu>
+<app-back-button></app-back-button>
+<h4 class="title-text">Elige un deck</h4>
+    <div class="multiple-decks">
+        <button  class="button-text" (click)="deckSelected(deck)" *ngFor="let deck of decks">{{deck.name}}</button>
+    </div>
