fix: Error message for repeated username now works as well, made the error handler take into consideration different cases

--- a/Frontend/src/app/components/forms/sign-up-form/sign-up-form.component.html
+++ b/Frontend/src/app/components/forms/sign-up-form/sign-up-form.component.html
@@ -35,7 +35,7 @@
         <mat-label for="username">Alias: </mat-label>
         <input [formControl]="playerAlias" type="text" id="username" name="username" class="form-input" style="width: 300px;" placeholder="_JD2001_" required>
         <br>
-        <mat-error *ngIf="playerAlias.invalid && fault">{{getErrMessage(playerAlias)}}</mat-error>   
+        <mat-error *ngIf="(playerAlias.invalid&&fault)||useralreadytaken">{{getErrMessage(playerAlias)}}</mat-error>   
     </div>
     <br>
     <div class="form-group">
