Fix: Player can select three distinct cards, he also gets 15  cards assigned and he has to select or else it will notify the missing selection

--- a/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
+++ b/Frontend/src/app/components/pop-ups/initial-card-chooser/initial-card-chooser.component.html
@@ -11,6 +11,7 @@
     
     <mat-card>
       <h2 class = "title-text">Elija una de estas tres cartas para añadir.</h2>
+      <mat-error *ngIf="cardselectedfault">Debe elegir una de las cartas</mat-error>
       <app-multiple-cards [cards]="clickableCards" [clickable]="true"></app-multiple-cards>
     </mat-card>
   </div>
