Add: Included planet services, and refactored a couple of services for card choosing refactored the old interface to match the one on the api

--- a/Frontend/src/app/components/forms/create-planet-form/create-planet-form.component.html
+++ b/Frontend/src/app/components/forms/create-planet-form/create-planet-form.component.html
@@ -27,7 +27,7 @@
                     <select [formControl]="type" id="type" name="type" class="form-input" placeholder="MR"
                         style="width: 150px;" required>
                         <option *ngFor="let type of types">
-                            {{type}}
+                            {{type.typeName}}
                         </option>
                     </select>
                     <br>
