--- a/Frontend/src/app/components/views/create/create-deck/create-deck.component.html
+++ b/Frontend/src/app/components/views/create/create-deck/create-deck.component.html
@@ -1,4 +1,7 @@
 <app-side-menu></app-side-menu>
 <app-back-button></app-back-button>
 <h4 class="title-text">Crear Deck</h4>
-<app-create-deck-form></app-create-deck-form>
+<div class = "box">
+    <app-create-deck-form></app-create-deck-form>
+    </div>
+
