--- a/Frontend/src/app/components/views/create/create-deck/create-deck.component.scss
+++ b/Frontend/src/app/components/views/create/create-deck/create-deck.component.scss
@@ -4,3 +4,24 @@
     text-shadow: 2px 2px #000000;
     text-align: center;
   }
+
+  .box {
+
+    margin-left: -10px;
+    font-size: 1.4rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: left;
+    margin-top: 5vh;
+}
+
+.multiple-cards{
+    display: flex;
+  }
+
+  .app-card{
+    padding-right: 20px;
+
+  }
+
