add: cards to planets

--- a/Frontend/src/app/components/elements/multiple-cards/multiple-cards.component.scss
+++ b/Frontend/src/app/components/elements/multiple-cards/multiple-cards.component.scss
@@ -5,7 +5,18 @@
   margin-bottom: 20px;
   }
 
-  .app-card{
-   padding: 15px;
-  }
+  .multiple-cards-close{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px;
+    margin-bottom: 5px;
+    }
+
+    .app-card{
+      padding: 5px;
+     }
+
+     .app-card-close{
+      padding: 0px;
+     }
  
