--- a/Frontend/src/app/components/views/game-setup/game/game.component.html
+++ b/Frontend/src/app/components/views/game-setup/game/game.component.html
@@ -1,7 +1,7 @@
 <div class="game">
     <h4 class="title-text">Juego</h4>
     <div class="flex-container">
-        <app-multiple-planets [planets]="planets"></app-multiple-planets>
+        <app-multiple-planet-cards [planets]="planets"></app-multiple-planet-cards>
         <app-multiple-cards class="cards" [clickable]="true" [cards]="cards"></app-multiple-cards>
     </div>
 </div>
