Add: game setup turn, deck, bet and buttons

--- a/Frontend/src/app/components/elements/planet-cards/planet-cards.component.scss
+++ b/Frontend/src/app/components/elements/planet-cards/planet-cards.component.scss
@@ -1,7 +1,7 @@
 .form-container {
     padding: 0px;
-    width: 450px;
-    font-size: 2rem;
+    margin:0px;
+    width: 600px;
     display: grid;
     justify-content: center;
     align-items: center;
