--- a/Frontend/src/app/components/views/game-setup/game/game.component.scss
+++ b/Frontend/src/app/components/views/game-setup/game/game.component.scss
@@ -13,3 +13,45 @@
     margin: 0px;
     
 }
+
+.deck-text {
+    color: #f0f0f0;
+    border: 5px double #f0f0f0;
+    font-size: 1.8rem;
+    background: #f0f0f030;
+    margin: 5px;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    height: 155px;
+    width: 100px;
+    padding-top: 20px;
+    font-family: 'Rajdhani-SemiBold';
+    text-align: center;
+    margin-top: 20px;
+}
+
+
+  
+
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.grid {
+    margin-top: 20px;
+    display: grid;
+}
+
+.button-text {
+    margin: 5px;
+}
+
+.title-text {
+    font-size: 3rem;
+    justify-content:space-around;
+}
