Update:interface changes

--- a/Frontend/src/app/components/elements/planet-cards/planet-cards.component.scss
+++ b/Frontend/src/app/components/elements/planet-cards/planet-cards.component.scss
@@ -2,14 +2,16 @@
     padding: 0px;
     margin:0px;
     width: 600px;
+    height: 500px;
     display: grid;
-    justify-content: center;
-    align-items: center;
     background-color: #2a556e80;
     border-radius: 10px;
     box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),
                 0px 5px 8px 0px rgba(0,0,0,0.14),
                 0px 1px 14px 0px rgba(0,0,0,0.12);
+    justify-items: center;
+    
+   
 
 }
 
