--- a/Frontend/src/app/components/views/game-setup/game/game.component.html
+++ b/Frontend/src/app/components/views/game-setup/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="game">
-    <label class="title-text">Apuesta: {{bet}} Turno: {{turn}}/{{totalTurns}} {{timeRemaining}}s</label>
+    <label class="title-text">Apuesta: {{bet}} Turno: {{turn}}/{{totalTurns}} Tiempo restante: {{timeRemaining}}s</label>
     <div class="flex-container">
         <app-multiple-planet-cards [planets]="planets"></app-multiple-planet-cards>
         <div class="flex">
