--- a/Frontend/src/app/components/elements/planet-cards/planet-cards.component.html
+++ b/Frontend/src/app/components/elements/planet-cards/planet-cards.component.html
@@ -5,6 +5,9 @@
     <div *ngIf= "planet.show">
         <app-planet [element]="planet"></app-planet>
     </div>
+    <div *ngIf= "!planet.show">
+        <app-planet [element]="hidden"></app-planet>
+    </div>
     
     <app-multiple-cards [cards]="cards"></app-multiple-cards>
 </div>
