Add: api services for deck generation

--- a/Frontend/src/app/components/views/single-deck/single-deck.component.html
+++ b/Frontend/src/app/components/views/single-deck/single-deck.component.html
@@ -1,4 +1,4 @@
-<h2 class="title-text">{{data.deck.name}}</h2>
+<h2 class="title-text">{{something.deck.name}}</h2>
 <mat-card-content class="mat-card-content">
-    <app-multiple-cards [cards]="data.deck.cards"></app-multiple-cards>
+    <app-multiple-cards [cards]="DeckCards"></app-multiple-cards>
   </mat-card-content>
